--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "@walletconnect/browser-utils": "^1.7.8",
+    "@web3auth/web3auth": "^0.6.2",
+    "ethers": "^5.6.1",
+    "magic-sdk": "^8.1.0",
+    "moment": "^2.29.1",
+    "moralis": "^1.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "react-moralis": "^1.3.5",
+    "react-simple-hook-modal": "latest",
+    "web3uikit": "^0.1.110"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
